--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header ul li a:hover {
 }
 .banner {
 	height: 60vh;
-	background-image: url('../img/banner.jpeg');
+	background-image: url('banner.jpeg');
 	background-size: cover;
 	position: relative; 
 	display: flex;
